[package]
name = "big_nyan_cat"
version = "0.1.0"
authors = ["Nanai10a <Nanai10a@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
#version = "0.3.0"
#default-features = false
#features = [
#    "bevy_audio",
#    "bevy_dynamic_plugin",
#    "bevy_gilrs",
#    "bevy_gltf",
#    "bevy_wgpu",
#    "bevy_winit",
#    "render",
#    "png",
#    "hdr",
#    "mp3",
#    "x11",

#    "render",
#    "wgpu_trace",
#    "flac",
#    "vorbis",
#    "wav",
#    "serialize",
#    "wayland",
#]
